--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,7 +7,7 @@
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "en",
+  "default_locale": "zh_CN",
   "background": {
     "scripts": [
       "scripts/chromereload.js",
@@ -55,7 +55,7 @@
     }
   ],
   "omnibox": {
-    "keyword": "OMNIBOX-KEYWORD"
+    "keyword": "douyu"
   },
   "page_action": {
     "default_icon": {
