--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "douyu-plugin",
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.4.1"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4"
