--- a/app/manifest.json
+++ b/app/manifest.json
@@ -10,6 +10,7 @@
   "default_locale": "zh_CN",
   "background": {
     "scripts": [
+      "bower_components/jquery/dist/jquery.min.js",
       "scripts/chromereload.js",
       "scripts/background.js"
     ]
